syntax = "proto3";

package greeting;

import "validate.proto";

option go_package = "generated/greeter";

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string message = 1 [(validate.rules).string.const = "hello"];
}

message HelloResponse {
    string message = 1;
}